maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:28: error: ')' expected but ';' found.
def marquer(x:Int;y:Int) {
                 ^JediEscaper:28: error: ';' expected but ')' found.
def marquer(x:Int;y:Int) {
                       ^