maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
var i:Int = 0;
var xBaggle:Int = 0;
var yBaggle:Int = 0;
var x:Int = 0;
var y:Int = 0;
var c:Int = getMondeLargeur()*getMondeHauteur();

override def run() {
  marquerBaggle();
  marquer();
}

def marquerBaggle() {
  while ( aBiscuit(xBaggle,yBaggle) ){
    xBaggle += 1;
    if ( xBaggle == getMondeLargeur() ){
      xBaggle = 0;
      yBaggle += 1;
    }
  }
  setIndication(xBaggle,yBaggle,i);
  c -= 1;
  x = xBaggle;
  y = yBaggle;
}

def marquer(x:Int;y:Int) {
  i += 1;
  if ( c != 0 ){
    if ( !aMurNord(x,y) ){
      if ( getIndication(x,y-1) != 9999 ){
        setIndication(x,y-1,i);
        c-=1;
        marquer(x,y-1);
      }
    }
    if ( !aMurOuest(x,y) ){
      if ( getIndication(x-1,y) != 9999 ){
        setIndication(x-1,y,i);
        c-=1;
        marquer(x-1,y);
      }
    }
    if ( !aMurSud(x,y) ){
      if ( getIndication(x,y+1) != 9999 ){
        setIndication(x,y+1,i);
        c-=1;
        marquer(x,y+1);
      }
    }
    if ( !aMurEst(x,y) ){
      if ( getIndication(x+1,y) != 9999 ){
        setIndication(x+1,y,i);
        c-=1;
        marquer(x+1,y);
      }
    }
  }
}

def aMurSud(x:Int,y:Int) : Boolean = {
  if ( y != getMondeHauteur()-1 ){
    return aMurNord(x,y+1);
  } else {
    return false;
  }
}

def aMurOuest(x:Int,y:Int) : Boolean = {
  if ( x != getMondeLargeur()-1 ){
    return aMurNord(x+1,y);
  } else {
    return false;
  }
}